# hebocr-testing

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  HACKING  Makefile.am  README.md  configure.ac  hebocr.pc.in  setup.py
hebocr/: hebocr.py
src/: Makefile.am  hebocr.h  hebocr.py  ho_objlist.c  ho_objlist.h  ho_objlist_stat.c  ho_objlist_stat.h  ho_objmap.c  ho_objmap.h  ho_objmap_filter.c  ho_objmap_filter.h  ho_pixbuf.c  ho_pixbuf.h  ho_pixbuf_draw.c  ho_pixbuf_draw.h  ho_pixbuf_filter.c  ho_pixbuf_filter.h  ho_pixbuf_layout.c  ho_pixbuf_layout.h  ho_pixbuf_op.c  ho_pixbuf_op.h  ho_pixbuf_pnm.c  ho_pixbuf_pnm.h  ho_pixsum.c  ho_pixsum.h
tests/: Makefile.am  test_layout.c  test_objmap.c  test_pixbuf.c
tests/images/: Makefile.am  p4.pbm  p5.pnm  p6.pnm
